<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="250dp"
	android:layout_height="wrap_content"
	android:background="@color/todo_background_todo_app"
	android:orientation="vertical"
	android:paddingHorizontal="16dp"
	android:paddingVertical="10dp">

	<EditText
		android:id="@+id/etTaskName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="10dp"
		android:backgroundTint="@color/white"
		android:hint="@string/todo_dialog_add_task"
		android:maxLines="1"
		android:singleLine="true"
		android:textColor="@color/white"
		android:textColorHint="@color/white" />

	<RadioGroup
		android:id="@+id/rgCategories"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<RadioButton
			android:id="@+id/rdPersonal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:buttonTint="@color/todo_personal_category"
			android:checked="true"
			android:text="@string/todo_dialog_category_personal"
			android:textColor="@color/white" />

		<RadioButton
			android:id="@+id/rdBusiness"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:buttonTint="@color/todo_business_category"
			android:text="@string/todo_dialog_category_business"
			android:textColor="@color/white" />

		<RadioButton
			android:id="@+id/rdOther"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:buttonTint="@color/todo_other_category"
			android:text="@string/todo_dialog_category_other"
			android:textColor="@color/white" />

	</RadioGroup>

	<Button
		android:id="@+id/btnAddTask"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:backgroundTint="@color/todo_accent"
		android:text="@string/todo_dialog_add_task_button" />

</LinearLayout>